Bug 1030577 - Move some GC guards below the GC_BEGIN callback. r=jonco, a=sledru